--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,15 +16,17 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  recase: ^4.1.0
+  remove_diacritic: ^0.9.0
 
 flutter:
 
  fonts:
-   - family: CaskaydiaMono Nerd Font
+   - family: CaskaydiaMono Nerd Font Mono
      fonts:
-       - asset: lib/fonts/CaskaydiaMonoNerdFont-Regular.ttf
+       - asset: lib/fonts/CaskaydiaMonoNerdFontMono-Regular.ttf
          weight: 400
-       - asset: lib/fonts/CaskaydiaMonoNerdFont-Bold.ttf
+       - asset: lib/fonts/CaskaydiaMonoNerdFontMono-Bold.ttf
          weight: 700
-       - asset: lib/fonts/CaskaydiaMonoNerdFont-Italic.ttf
+       - asset: lib/fonts/CaskaydiaMonoNerdFontMono-Italic.ttf
          style: italic
