--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -28,14 +28,18 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  markdown: ^7.2.1
   flutter_omarchy:
     path: ../
+  flutter_localizations:
+    sdk: flutter
   flutter:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  markdown_widget: ^2.3.2+8
 
 dev_dependencies:
   flutter_test:
