--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   markdown_widget: ^2.3.2+8
+  args: ^2.7.0
 
 dev_dependencies:
   flutter_test:
