Github action workflow and pubspec updates.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_omarchy
-description: "A new Flutter package project."
+description: "Develop Flutter apps for Omarchy"
 version: 0.1.0
 homepage: https://github.com/aloisdeniel/flutter_omarchy
 
