--- a/.github/workflows/deploy-example.yml
+++ b/.github/workflows/deploy-example.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           cd example
           flutter pub get
-          flutter build web --release --base-href --wasm --no-tree-shake-icons 
+          flutter build web --release --wasm --no-tree-shake-icons 
       
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
