--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   markdown_widget: ^2.3.2+8
   args: ^2.7.0
+  url_launcher: ^6.3.2
+  qr: ^3.0.2
+  pasteboard: ^0.4.0
 
 dev_dependencies:
   flutter_test:
